--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -15,9 +15,21 @@
             placeholder="Nombre del producto"
           />
 
-          <span class="form-text text-danger">
+          <span
+            *ngIf="
+              myForm.controls['name'].getError('required') &&
+              myForm.controls['name'].touched
+            "
+            class="form-text text-danger"
+          >
+            Este campo es requerido
+          </span>
+          <span
+            *ngIf="myForm.controls['name'].getError('minlength')"
+            class="form-text text-danger"
+          >
             <!-- Debe de ser de 3 letras -->
-            error message
+            Este campo requiere mímino 3 letras
           </span>
         </div>
       </div>
