--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -15,21 +15,8 @@
             placeholder="Nombre del producto"
           />
 
-          <span
-            *ngIf="
-              myForm.controls['name'].getError('required') &&
-              myForm.controls['name'].touched
-            "
-            class="form-text text-danger"
-          >
-            Este campo es requerido
-          </span>
-          <span
-            *ngIf="myForm.controls['name'].getError('minlength')"
-            class="form-text text-danger"
-          >
-            <!-- Debe de ser de 3 letras -->
-            Este campo requiere mímino 3 letras
+          <span *ngIf="isValidField('name')" class="form-text text-danger">
+            {{ getFieldError("name") }}
           </span>
         </div>
       </div>
@@ -44,7 +31,7 @@
             formControlName="price"
             placeholder="Precio del producto"
           />
-          <span class="form-text text-danger">
+          <span *ngIf="isValidField('price')" class="form-text text-danger">
             El precio debe de ser 0 o mayor
           </span>
         </div>
@@ -61,7 +48,7 @@
             placeholder="Existencias del producto"
           />
 
-          <span class="form-text text-danger">
+          <span *ngIf="isValidField('inStorage')" class="form-text text-danger">
             Las existencias deben de ser 0 o mayor
           </span>
         </div>
