--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -15,7 +15,7 @@
             formControlName="name"
           />
 
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('name')">
             Debe de ser en formato de nombre y apellido
           </span>
         </div>
@@ -31,7 +31,7 @@
             placeholder="Email del usuario"
             formControlName="email"
           />
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('email')">
             mensaje de error del email
           </span>
         </div>
@@ -47,7 +47,7 @@
             placeholder="Nombre código del usuario"
             formControlName="username"
           />
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('username')">
             El username no puede ser Strider
           </span>
         </div>
@@ -64,7 +64,7 @@
             formControlName="password"
           />
 
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('password')">
             La contraseña debe de ser mayor de 6 caracteres.
           </span>
         </div>
@@ -81,7 +81,7 @@
             formControlName="confirmPassword"
           />
 
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('confirmPassword')">
             Las contraseñas deben de ser iguales
           </span>
         </div>
